# CMakePattern

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/sub_dir/: .directory  CMakeLists.txt
